addons/web/static/src/views/form/form_controller.scss
/* ... */
// DESKTOP ONLY INPUTBOX RULES
body:not(.o_touch_device) .o_form_view {
    .oe_title:has(h1), .o_form_header_details{
        .o_input_box:not(.o_input_box .o_input_box):is(h1, h1 *) {
            --inputbox-spacing-unit: 10px;

            .o_input_box_overlay_start, .o_input_box_overlay_end {
                top: 50%;
                transform: translateY(-50%);
            }

            img {
                height: 100%;
            }
        }
    }

    .o_field_widget.o_readonly_modifier:not(.o_form_label .o_field_widget) {
        color: $text-muted;
    }
}

// LABEL RULES
.o_touch_device .o_form_view {
    .o_wrap_cell:has(.o_input, textarea, select, [contenteditable]):not(:has(.o_setting_box)) .o_form_label:not(.o_field_widget .o_form_label):not(.form-check-label),
    .oe_title:is(:has(.o_input, textarea, select, [contenteditable]), :not(:has(h1,h2,h3,h4,h5,h6))) .o_form_label,
    .o_cell:not(.o_wrap_field_inline *):has(+ .o_cell .o_field_widget :is(.o_input, textarea, select, [contenteditable]), + .o_cell .o_field_widget.o_readonly_modifier):not(:has(table)) .o_form_label {
        position: absolute;
        transform: translate(var(--inputbox-spacing-unit), calc(-.5 * var(--fieldWidget-label-height) - #{$input-border-width}));
        background: $o-view-background-color;
        padding: 0 calc(var(--inputbox-spacing-unit) / 2) !important;
        font-weight: 500;
        font-size: var(--fieldWidget-label-height);
        line-height: var(--fieldWidget-label-height);
        user-select: none;
        z-index: 1;
        border-radius: var(--inputbox-spacing-unit);

        .o_field_char.o_readonly_modifier {
            margin-bottom: 0;
        }
    }
    .o_form_label {
        font-size: var(--fieldWidget-label-height);
    }
    .o_label_active {
        color: $o-action;
    }
    .o_row[colspan="2"] .o_col .o_form_label {
        width: initial;
    }
}

@include media-breakpoint-up(sm) {
    .o_touch_device .o_form_view .o_inner_group {
        gap: 0;
        .o_cell.o_wrap_input:has(.o_input) {
            grid-column: 1/3;
        }
    }
}

