[FIX] mail, web: big avatar in many2x fields
Before this commit, the avatars were too big.

Steps to reproduce:
- Go to Payroll
- Employees
- Salary Adjustments
- Select an employee

task-6008226

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -1283,10 +1283,6 @@ body:not(.o_touch_device) .o_form_view {
                 top: 50%;
                 transform: translateY(-50%);
             }
-
-            img {
-                height: 100%;
-            }
         }
     }
 
